django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-backend
  template:
    metadata:
      labels:
        app: django-backend
    spec:
      containers:
      - name: django-backend
        image: mohamedmass1245/resto_django:v1.7
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: django-backend-service
spec:
  selector:
    app: django-backend
  type: NodePort
  ports:
    - protocol: TCP
      port: 8000        # Port inside the container (Django app)
      targetPort: 8000   # Target port on the container
      nodePort: 30003    # External port on the node
