ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: buypk8.ddns.nets
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-backend-service
            port:
              number: 8000
